Improve UI, add recipe modal view and enhance UX

--- a/index.html
+++ b/index.html
@@ -27,4 +27,21 @@
 
 </section>
 
-<!-
+<!-- Modal -->
+<div id="recipeModal" class="modal">
+  <div class="modal-content">
+    <span class="close">×</span>
+    <img id="modalImg">
+    <h2 id="modalTitle"></h2>
+
+    <h4>🧾 Ingredients</h4>
+    <p id="modalIngredients"></p>
+
+    <h4>👩‍🍳 Preparation Steps</h4>
+    <p id="modalSteps"></p>
+  </div>
+</div>
+
+<script type="module" src="script.js"></script>
+</body>
+</html>
